--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button onclick="playAgain()" class="btn">Play again</button>
     </div>
     <script src="quiz.js"></script>
-    <script src="main_modifie.js"></script>
+    <script src="main.js"></script>
     <script src="end.js"></script>
 </body>
 </html>
