--- a/highScores.html
+++ b/highScores.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Kosugi&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/ghibli.png">
@@ -19,6 +19,6 @@
             <a href="index.html" class="btn">Home</a>
         </div>
     </div>
-    <script src="highScores.js"></script>
+    <script src="js/highScores.js"></script>
 </body>
 </html>
