--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button id="start" class="btn">Start</button>
                 <a href="highScores.html" class="btn">High Scores</a>
             </aside>
-            <p>Made by Emma Pernin and Julia Raybaudi</p>
+            <p class="crea">Made by Emma Pernin and Julia Raybaudi</p>
         </div>
     </div>
     <div class="box hide" id="quiz">
